@@ -1,13 +1,11 @@
 export(addOptPathEl)
 export(convertParamSetToIrace)
 export(dfRowsToList)
-export(dfRowsToList2)
 export(dfRowToList)
 export(discreteNameToValue)
 export(discreteValueToName)
 export(filterParams)
 export(generateDesign)
-export(generateDesign2)
 export(getLower)
 export(getOptPathBestIndex)
 export(getOptPathDOB)
