@@ -1,3 +1,7 @@
+ParamHelpers_1.2:
+- rewrote generateDesign and dfRowsToList in C to greatly increase speed in 
+  the case of dependent parameters
+
 ParamHelpers_1.1-35:
 - concept of dependent parameters was introduced (argument "requires")
 - as.data.frame.OptPath: discretes.as.factor option
